--- a/templates/index.html
+++ b/templates/index.html
@@ -414,6 +414,39 @@
     </p>
   </div>
 
+  
+  <div class="content-second">
+    <h1>Türkiye su fakiri bir ülke mi?</h1>
+    <p class="paragraph">
+      Türkiye su fakiri olmasa da “su stresi yaşayan bir ülke” olarak kabul ediliyor. Ancak uzman görüşlerine göre mevcut gidişat değişmezse önümüzdeki yıllarda su fakiri kategorisine girme riski var.
+    </p>
+    <p class="paragraph">
+      Su fakiri bölgeleri, kişi başına yıllık kullanılabilir tatlı su miktarının 1000 m³’ün altında olan ülkeler oluşturuyor.
+      Suudi Arabistan, Birleşik Arap Emirlikleri ve Katar gibi Ortadoğu ülkeleri ile Somali, Cibuti ve Eritre gibi Afrika ülkeleri bu kategoride.
+    </p>
+    <p class="paragraph">
+      Su stresi yaşayan ülkelerde ise kişi başına yıllık su miktarı 1000 ve 1700 m³ aralığında.
+      2024 verilerine göre, Türkiye'de kişi başına düşen yıllık kullanılabilir su miktarı yaklaşık 1300 ila 1400 m³.
+    </p>
+    <p class="paragraph">
+      Su zengini ülkeler ise 8 bin ila 10 bin m³ üzeri miktarla genelde muson yağmurları alan Ekvator çevresi ülkelerinden oluşuyor.
+    </p>
+    <h1>Suyumuz neden bitiyor?</h1>
+    <p class="paragraph">
+      Türkiye'de suyun en büyük tüketicisi yüzde 70’e varan paya sahip olan tarımsal sulama sektörü.
+      Sanayide de yaklaşık yüzde 15 ve evsel kullanım ve içilen su miktarı da yüzde 15 civarında.
+    </p>
+    <p class="paragraph">
+      Uzmanlara göre su krizinin başlıca nedeni iklim krizi ve buna bağlı kuraklık.
+      Zira iklim krizinin dünyada en kötü etkilediği yerlerden biri Akdeniz bölgesi.
+      Küresel ısınmaya karşı büyük ölçekte bir gerileme sağlanamazsa Akdeniz havzasında kuraklığın baş göstermesi bekleniyor.
+    </p>
+    <p class="paragraph">
+      Ancak nüfus artışı, tarımsal sulamadaki verimsizlik ve kirlilik gibi faktörler de çok etkili.
+      Bunlar da değişmeden devam ederse 20 ila 30 yılda, yani 2050'lerde Türkiye’nin de su fakiri ülke konumuna düşmesi mümkün.
+    </p>
+  </div>
+
   <script>
     const container = document.getElementById('drip-container');
     const numDrops = 20; 
